
Note the change is in the addition of the 'storetype' - an integer value
which can be one of PSHMGR_STORETYPE_EXCH (exchange server) or
PSHMGR_STORETYPE_AS (ActiveSync). The command line tools have been updated
to match. Exchange server partnerships can now be seen in the listing, and
can be deleted by both delete_partnership.py and clean_partnerships.py.
In the case of clean_partnerships.py, there will be an additional prompt
to delete server partnerships which will be displayed only if such
partnerships are present.

Currently we handle a maximum of 3 partnerships (2 AS, 1 server) - this
appears to be the maximum that WMx will handle - but with care this could
be increased easily.

Creation of server partnerships from the host is being looked at as 
a later addition.

Also now correctly handles dangling registry entries and partnerships
without clobbering server partnerships.

01/04/2008 - 115100 Dr J A Gow
------------------------------

Fixed minor problem with exceptions being generated in file sync code
when an item has been removed on both host and remote before syncing.


05/04/2008 - 130900 Dr J A Gow
------------------------------

Added new API to sync-engine: GetDeviceBindingState().
in_signature is none, out_signature is 'u'. It takes no arguments
and returns an integer, which can take on one of the three values
below (defined in constants.py).

BSTATE_DEVNOTCONNECTED (0): device not connected
BSTATE_DEVNOTBOUND     (1): device connected but no partnership binding
                            available
BSTATE_DEVBOUND        (2): device fully bound and ready to sync.

This function will not throw exceptions and is designed to be able
to cleanly query the state of the device as seen by sync-engine at any time.

This change was committed in r3363 but owing to an oversight this CHANGELOG
entry was omitted.

05/04/2008 - 143500 Dr J A Gow
------------------------------

Code cleanups in airsync.py, no functionality changes.



